# Credit_scoring

./: .coverage  .dockerignore  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  monitoring.md  pyproject.toml  start.sh  zensical.toml
.github/workflows/: cd.yml  ci.yml
api/: test.py
config/: exp_catboost.yaml  exp_dummy.yaml  exp_lightgbm.yaml  exp_logreg.yaml  exp_random_forest.yaml  exp_xgboost.yaml  training.yaml
docs/: 02_model.md  03_api.md  04_prediction.md  05_monitoring.md  06_cicd.md  07_depot.md  api.md  cicd.md  demo.md  deployment.md  depot.md  index.md  model.md  monitoring.md  optimisation.md  prediction.md  project.md
docs/stylesheets/: presentation.css
logs/: api_calls.jsonl  predictions.jsonl
models/production/: model.pkl  requirements.txt
reports/: analysis_summary.json  drift_report.html  quality_report.html
scripts/: export_model.py  export_onnx.py  generate_base_for_inference.py  profile_inference.py  run_exp.sh  run_exp_debug.sh  run_exp_full.sh  run_exp_no_cv.sh  run_experiment.py  run_ft_selection_nb.py  run_ft_selection_ranking.py  x.py
src/credit_scoring/: config.py  logger.py  main.py  utils.py
src/credit_scoring/data/: load.py  preprocess.py
src/credit_scoring/features/: feature_selection.py  preprocess.py
src/credit_scoring/interfaces/: api.py  app_gradio.py  app_streamlit copy.py  app_streamlit.py
src/credit_scoring/interfaces/api/: main_back.py
src/credit_scoring/interfaces/monitoring/: data.py
src/credit_scoring/interfaces/pages/: monitoring.py  scoring.py
src/credit_scoring/model/: fine-tune.py
src/credit_scoring/models/: evaluate.py  explain.py  train.py  training_pipeline.py  tune.py
src/credit_scoring/pipelines/: feature_selection.py  inference.py  training.py
src/credit_scoring/prepare/: load.py  preprocess.py
src/credit_scoring/serving/: api.py  constants.py  drift_analysis.py  inference.py  schemas.py
src/credit_scoring/serving/db/: reference.parquet  test.parquet
src/credit_scoring/serving/model/: MLmodel  conda.yaml  input_example.json  model.onnx  model.pkl  requirements.txt  serving_input_example.json
tests/: test_config.py
tests/data/: test_preprocess.py
tests/features/: test_preprocess.py
tests/serving/: test_api.py  test_inference.py
