[project]
name = "credit-scoring"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Olivier", email = "mail@mail.com" }
]
requires-python = ">=3.12"

dependencies = [
    # ── API ─────────────────────────────
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    # ── UI ──────────────────────────────
    "streamlit>=1.58.0",
    "gradio>=6.16.0",
    # ── Data / ML inference ─────────────
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    # ── utils ───────────────────────────
    "joblib>=1.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
]


[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/credit_scoring --cov-report=term-missing"

[dependency-groups]
ci = [
    "ruff>=0.15.12",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]

dev = [
    {include-group = "ci"},
    # experiment tracking
    "mlflow>=3.12.0",
    # explainability / viz
    "shap>=0.46.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "missingno>=0.5.2",
    "tabulate>=0.10.0",
    # heavy training / optimization
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "numba>=0.59.0",
    # tooling
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]
